# lore

./: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
sidecar/: .env.example  build.ps1  lore-sidecar.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
sidecar/app/: __init__.py  config.py  main.py  parent_watchdog.py  settings_store.py
sidecar/app/api/: __init__.py  eval.py  graph.py  health.py  index.py  models.py  query.py  refactor.py  settings.py  source.py
sidecar/app/db/: __init__.py  lancedb_client.py  sqlite_store.py
sidecar/app/docs/: __init__.py  pipeline.py  retrieval.py  splitter.py
sidecar/app/eval/: __init__.py  harness.py
sidecar/app/graph/: __init__.py  analysis.py  graph_store.py  imports.py  rules.py  semantic.py
sidecar/app/history/: __init__.py  blame.py  git_walker.py  history_index.py  history_store.py  (+3 more)
sidecar/tests/: test_answer.py  test_answer_stream.py  test_ast_chunker.py  test_code_index.py  test_context.py  test_conversation.py  test_docs_index.py  test_docs_pipeline.py  test_docs_splitter.py  test_enrich.py  test_eval.py  test_expand.py  test_file_state.py  test_graph_analysis.py  test_graph_imports.py  test_graph_rules.py  test_history_index.py  test_history_retrieval.py  test_history_walk.py  test_mmr.py  test_models.py  test_ollama_stream.py  test_parent_watchdog.py  test_parents.py  test_refactor_api.py  test_refactor_candidates.py  test_retrieval.py  test_router.py  test_run.py  test_semantic.py  test_settings_api.py  test_source.py
(+57 files in other folders)
