[project]
name = "lore-sidecar"
version = "0.1.0"
description = "Python backend (FastAPI) for the Lore desktop assistant"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
